@@ -11,6 +11,7 @@ dist_pkgdata_DATA = \
   ALICE_2010_S8706239.info \
   ALICE_2011_S8909580.info \
   ALICE_2011_S8945144.info \
+  ALICE_2012_I1181770.info \
   ARGUS_1993_S2653028.info \
   ARGUS_1993_S2669951.info \
   ARGUS_1993_S2789213.info \
