@@ -19,6 +19,7 @@ dist_pkgdata_DATA = \
   ALICE_2010_S8706239.aida \
   ALICE_2011_S8909580.aida \
   ALICE_2011_S8945144.aida \
+  ALICE_2012_I1181770.aida \
   ARGUS_1993_S2653028.aida \
   ARGUS_1993_S2669951.aida \
   ARGUS_1993_S2789213.aida \
