@@ -40,7 +40,8 @@ RivetALICEAnalyses_la_SOURCES = \
     ALICE_2010_S8625980.cc \
     ALICE_2010_S8706239.cc \
     ALICE_2011_S8909580.cc \
-    ALICE_2011_S8945144.cc
+    ALICE_2011_S8945144.cc \
+    ALICE_2012_I1181770.cc
 
 
 lib_LTLIBRARIES += RivetATLASAnalyses.la
